[package]
name = "ldap-authd"
version = "0.1.0"
edition = "2021"
authors = ["Maximilian Kapra <maximilian@kapra.de>"]

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
clap = { version = "4.2.5", features = ["derive"] }
lazy_static = "1.4.0"
ldap3 = "0.11.1"
regex = "1.8.1"
tide = "0.14.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
log = "0.4.17"
