[package]
name = "ldap-authd"
version = "0.1.0"
edition = "2021"
authors = ["Maximilian Kapra <maximilian@kapra.de>"]

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
clap = { version = "4.3.10", features = ["derive"] }
lazy_static = "1.4.0"
ldap3 = "0.11.3"
regex = "1.8.4"
tide = "0.16.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.19"
